nickel-lang-cli/tests/snapshot/inputs/errors/record_destructuring_duplicate_ident.ncl
# capture = 'stderr'
# command = []
let f = fun { one, two, one } => { one, two }
in f { one = 1, two = "2" }